# experustracker

./: .gitignore  Cargo.toml  Makefile  README.md  config.yml  package.json  tailwind.config.js
src/: lib.rs  main.rs  utils.rs
src/app/: config.rs  mod.rs
src/app/api/: account.rs  book.rs  category.rs  mod.rs  record.rs  session.rs
src/app/handlers/: account.rs
src/app/middlewares/: mod.rs  params.rs  session.rs
src/app/web/: book.rs  category.rs  common.rs  handler.rs  mod.rs  record.rs  templates.rs
src/assets/: manifest.json  tailwind.css
src/database/: mod.rs
src/database/migrations/: 20231125051221_accounts.sql  20231125051226_sessions.sql  20231125121908_books.sql  20231125121930_account_book_many2many_relations.sql  20231126014848_categories.sql  20231126015045_records.sql
src/database/model/: account.rs  book.rs  category.rs  mod.rs  record.rs  session.rs
src/database/querier/: book.rs  category.rs  mod.rs  record.rs
src/routes/: api.rs  mod.rs  web.rs
templates/: add-book-owner.html  create-book.html  dashboard.html  index.html  login.html  not-found.html  protected.html  register.html  skel-dashboard.html  skel.html
templates/book/: add-book-owner.html  books.html  create-book.html  edit-book.html
templates/category/: categories.html  create-category.html  edit-category.html
templates/components/: back-button.html  menu.html
templates/record/: create-record.html  edit-record.html  records.html
